noation and chapters

--- a/0_titlepage.tex
+++ b/0_titlepage.tex
@@ -3,7 +3,7 @@
     \vspace{20mm}
 
     \centering
-    \huge\textbf{Blues}\par
+    \huge\textbf{Musiktheorie}\par
     \vspace{3mm}
 
     \begin{figure}[htbp]
