Harmonie in progress

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \setkomafont{pageheadfoot}{}
 \ihead{\leftmark}
 \cfoot*{\pagemark} %Pages for heading and plain pages
+\usepackage{enumitem}
 
 % heading spacing
 \usepackage[onehalfspacing]{setspace}
@@ -22,7 +23,6 @@
 \parskip 1.5em
 % text symbols
 \usepackage{textcomp}
-
 
 % =================== - GRAPHICS - =====================
 \usepackage{float}
@@ -32,7 +32,7 @@
 
 
 % =============== - MUSIC - =========================
-\usepackage[chorded]{songs} % Paket fuer Akkorddiagramme 
+\usepackage[chorded]{songs} % Paket fuer Akkorddiagramme
 
 
 % ======================================================
