--- a/main.tex
+++ b/main.tex
@@ -24,11 +24,12 @@
 \parskip 1.5em
 % text symbols
 \usepackage{textcomp}
+\usepackage{tabto}
 
 % =================== - Tables - =====================
 \usepackage{tabularx}
-
-
+% \usepackage{colortbl, hhline}
+\usepackage[table]{xcolor}
 % =================== - GRAPHICS - =====================
 \usepackage{float}
 \usepackage{graphicx}
