--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,8 @@
 \documentclass[12pt,a4paper]{scrartcl}
 \usepackage[left=4cm,right=2cm, top=3cm, bottom=3cm]{geometry}
 \usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+% \usepackage[utf8]{inputenc}
+\usepackage{fontspec}
 \usepackage[ngerman]{babel}
 \usepackage{lmodern}
 \KOMAoption{listof}{entryprefix}
@@ -39,6 +40,10 @@
 
 % =============== - MUSIC - =========================
 \usepackage[chorded]{songs} % Paket fuer Akkorddiagramme
+
+% lilyglyphs needs \usepackage{fontspec} to work
+% fontspec needs the xelatex compiler so change in settrings.json
+\usepackage{lilyglyphs}
 \newcommand{\RomanNumeralCaps}[1]
     {\MakeUppercase{\romannumeral #1}}
 
