back to standard tex compiler and notes table

--- a/0_titlepage.tex
+++ b/0_titlepage.tex
@@ -14,6 +14,6 @@
     \vspace{3mm}
     \textsc{\LARGE{Mathias Gewissen}}\par
     \vspace{3mm}
-    \large Untertitel \par
+    \large Musiktheoretische Sammlung für das Gitarrenspiel \par
 
 \end{titlepage}
