--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{scrartcl}
+\documentclass[12pt, a4paper]{scrartcl}
 \usepackage[left=4cm,right=2cm, top=3cm, bottom=3cm]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -63,7 +63,14 @@
 \newpage
 \pagenumbering{arabic}
 \input{Chapters/1_Chapter/1_Einleitung.tex}
+
 \newpage
-\input{Chapters/2_Grundlagen/Grundlagen.tex}
+\section{Grundlagen}
+\input{Chapters/2_Grundlagen/Ton_Tonarten_Tonleitern.tex}
+\input{Chapters/2_Grundlagen/Akkord.tex}
+\input{Chapters/2_Grundlagen/Stufenakkorde.tex}
+\input{Chapters/2_Grundlagen/Melodie.tex}
+\input{Chapters/2_Grundlagen/Harmonie.tex}
+\input{Chapters/2_Grundlagen/Rhytmus.tex}
 
 \end{document}
